--- a/package.json
+++ b/package.json
@@ -1,38 +1,37 @@
 {
   "name": "react-dip",
   "version": "0.0.2",
-  "description":
-    "placeholder for some upcoming deep-dive-dip-dop-micro-macro react lib",
+  "description": "placeholder for some upcoming deep-dive-dip-dop-micro-macro react lib",
   "main": "dist/react-dip.cjs.js",
   "module": "dist/react-dip.esm.js",
   "jsnext:main": "dist/react-dip.esm.js",
   "scripts": {
     "test": "flow && jest",
     "build:kcd": "kcd-scripts build",
-    "build":
-      "npm run build:commonjs && npm run build:css && npm run build:es && npm run build:demo && npm run build:umd",
-    "build:commonjs":
-      "npm run clean:commonjs && cross-env NODE_ENV=commonjs babel source --out-dir dist/commonjs",
+    "build": "npm run build:commonjs && npm run build:css && npm run build:es && npm run build:demo && npm run build:umd",
+    "build:commonjs": "npm run clean:commonjs && cross-env NODE_ENV=commonjs babel source --out-dir dist/commonjs",
     "build:css": "postcss source/styles.css -o styles.css --use autoprefixer",
-    "build:demo":
-      "npm run clean:demo && cross-env NODE_ENV=production webpack --config webpack.config.demo.js -p --bail",
-    "build:es":
-      "npm run clean:es && cross-env NODE_ENV=es babel src --out-dir dist/es",
-    "build:umd":
-      "npm run clean:umd && cross-env NODE_ENV=production webpack --config webpack.config.umd.js --bail",
-    "clean":
-      "npm run clean:commonjs && npm run clean:demo && npm run clean:es && npm run clean:umd",
+    "build:demo": "npm run clean:demo && cross-env NODE_ENV=production webpack --config webpack.config.demo.js -p --bail",
+    "build:es": "npm run clean:es && cross-env NODE_ENV=es babel src --out-dir dist/es",
+    "build:umd": "npm run clean:umd && cross-env NODE_ENV=production webpack --config webpack.config.umd.js --bail",
+    "clean": "npm run clean:commonjs && npm run clean:demo && npm run clean:es && npm run clean:umd",
     "clean:commonjs": "rimraf dist/commonjs",
     "clean:demo": "rimraf build",
     "clean:es": "rimraf dist/es",
     "clean:umd": "rimraf dist/umd",
-    "flow": "flow"
+    "flow": "flow",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/mdugue/react-dip.git"
   },
-  "keywords": ["react", "UI", "UX"],
+  "keywords": [
+    "react",
+    "UI",
+    "UX"
+  ],
   "author": "Manuel Dugue <post@manueldugue.de> (https://manueldugue.de)",
   "license": "MIT",
   "bugs": {
@@ -40,7 +39,13 @@
   },
   "homepage": "https://github.com/mdugue/react-dip#readme",
   "devDependencies": {
+    "@storybook/addon-actions": "^3.4.0",
+    "@storybook/addon-links": "^3.4.0",
+    "@storybook/addon-notes": "^3.4.0",
+    "@storybook/addons": "^3.4.0",
+    "@storybook/react": "^3.4.0",
     "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.0",
     "babel-jest": "^22.4.3",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
@@ -48,6 +53,7 @@
     "babel-preset-env": "^1.6.1",
     "babel-preset-flow": "^6.23.0",
     "babel-preset-react": "^6.24.1",
+    "babel-runtime": "^6.26.0",
     "cross-env": "^5.1.4",
     "flow-bin": "^0.69.0",
     "jest": "^22.4.3",
@@ -60,5 +66,7 @@
     "react": "^16.3.0-alpha.2",
     "react-dom": "^16.3.0-alpha.2"
   },
-  "jest": { "rootDir": "./src/" }
+  "jest": {
+    "rootDir": "./src/"
+  }
 }
