--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
   "name": "react-dip",
-  "version": "0.0.3",
+  "version": "0.0.3-1",
   "description": "placeholder for some upcoming deep-dive-dip-dop-micro-macro react lib",
   "main": "dist/react-dip.cjs.js",
   "module": "dist/react-dip.esm.js",
   "jsnext:main": "dist/react-dip.esm.js",
   "scripts": {
     "build": "kcd-scripts build --bundle",
-    "build-storybook": "build-storybook",
     "flow": "flow",
     "precommit": "kcd-scripts precommit",
     "storybook": "start-storybook -p 6006",
+    "storybook:build": "build-storybook",
     "test": "flow && jest"
   },
   "repository": {
