--- a/.gitignore
+++ b/.gitignore
@@ -9,12 +9,16 @@
 # production
 /dist
 
+# IDE
+/.vscode
+
 # misc
 .DS_Store
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
+.eslintcache
 
 npm-debug.log*
 yarn-debug.log*
