--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "name": "react-dip",
-  "version": "0.0.3-2",
-  "description":
-    "placeholder for some upcoming deep-dive-dip-dop-micro-macro react lib",
+  "version": "0.0.3-3",
+  "description": "placeholder for some upcoming deep-dive-dip-dop-micro-macro react lib",
   "main": "dist/react-dip.cjs.js",
   "module": "dist/react-dip.esm.js",
   "jsnext:main": "dist/react-dip.esm.js",
@@ -15,12 +14,18 @@
     "storybook:build": "build-storybook",
     "test": "flow && jest"
   },
-  "files": ["dist"],
+  "files": [
+    "dist"
+  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/mdugue/react-dip.git"
   },
-  "keywords": ["react", "UI", "UX"],
+  "keywords": [
+    "react",
+    "UI",
+    "UX"
+  ],
   "author": "Manuel Dugue <post@manueldugue.de> (https://manueldugue.de)",
   "license": "MIT",
   "bugs": {
@@ -63,7 +68,10 @@
       "no-eq-null": "off",
       "eqeqeq": "off",
       "react/jsx-indent": "off",
-      "complexity": ["error", 12]
+      "complexity": [
+        "error",
+        12
+      ]
     }
   },
   "eslintIgnore": [
