--- a/examples/create-react-app/package.json
+++ b/examples/create-react-app/package.json
@@ -4,14 +4,13 @@
   "private": true,
   "author": "Manuel Dugue <post@manueldugue.de> (https://manueldugue.de)",
   "dependencies": {
-    "flow-bin": "^0.68.0",
+    "flow-bin": "^0.69.0",
     "prettier": "^1.11.1",
-    "react": "^16.3.0-alpha.3",
-    "react-dip": "^0.0.1",
-    "react-dom": "^16.3.0-alpha.3",
+    "react": "^16.3.1",
+    "react-dip": "^0.0.3-4",
+    "react-dom": "^16.3.1",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "^1.1.1",
-    "react-transition-group": "^2.2.1",
+    "react-scripts": "^1.1.4",
     "web-animations-js": "^2.3.1"
   },
   "scripts": {
