--- a/examples/create-react-app/package.json
+++ b/examples/create-react-app/package.json
@@ -7,7 +7,7 @@
     "flow-bin": "^0.69.0",
     "prettier": "^1.11.1",
     "react": "^16.3.1",
-    "react-dip": "^0.0.3-4",
+    "react-dip": "^0.0.3-beta.1",
     "react-dom": "^16.3.1",
     "react-router-dom": "^4.2.2",
     "react-scripts": "^1.1.4",
