--- a/package.json
+++ b/package.json
@@ -17,11 +17,7 @@
     "storybook:build": "build-storybook",
     "test": "flow && jest"
   },
-  "files": [
-    "dist",
-    "preact",
-    "src"
-  ],
+  "files": ["dist", "preact", "src"],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/mdugue/react-dip.git"
@@ -61,7 +57,8 @@
     "prop-types": "^15.6.1",
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
-    "regenerator-runtime": "^0.11.1"
+    "regenerator-runtime": "^0.11.1",
+    "web-animations-js": "^2.3.1"
   },
   "dependencies": {},
   "peerDependencies": {
@@ -75,10 +72,7 @@
       "no-eq-null": "off",
       "eqeqeq": "off",
       "react/jsx-indent": "off",
-      "complexity": [
-        "error",
-        12
-      ]
+      "complexity": ["error", 12]
     }
   },
   "eslintIgnore": [
