--- a/package.json
+++ b/package.json
@@ -37,11 +37,12 @@
   },
   "homepage": "https://github.com/mdugue/react-dip#readme",
   "devDependencies": {
-    "@storybook/addon-actions": "^3.4.0",
-    "@storybook/addon-links": "^3.4.0",
-    "@storybook/addon-notes": "^3.4.0",
-    "@storybook/addons": "^3.4.0",
-    "@storybook/react": "^3.4.0",
+    "@storybook/addon-actions": "^3.4.1",
+    "@storybook/addon-links": "^3.4.1",
+    "@storybook/addon-notes": "^3.4.1",
+    "@storybook/addon-storyshots": "^3.4.1",
+    "@storybook/addons": "^3.4.1",
+    "@storybook/react": "^3.4.1",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
     "babel-jest": "^22.4.3",
@@ -57,7 +58,10 @@
     "prop-types": "^15.6.1",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
+    "react-router-dom": "^4.2.2",
     "regenerator-runtime": "^0.11.1",
+    "storybook-react-router": "^1.0.1",
+    "styled-components": "^3.2.6",
     "web-animations-js": "^2.3.1"
   },
   "dependencies": {},
