simplified examples, improved linting, created more complex test:ci script

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ script:
   - node --version
   - yarn --version
   - yarn build
-  - yarn test
+  - yarn test:ci
 cache:
   yarn: true
   directories:
