--- a/package.json
+++ b/package.json
@@ -15,13 +15,10 @@
     "precommit": "kcd-scripts precommit",
     "storybook": "start-storybook -p 6006",
     "storybook:build": "build-storybook",
-    "test": "flow && jest"
+    "test": "flow && jest",
+    "test:ci": "flow && npm run lint && npm run storybook:build && jest"
   },
-  "files": [
-    "dist",
-    "preact",
-    "src"
-  ],
+  "files": ["dist", "preact", "src"],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/mdugue/react-dip.git"
@@ -41,12 +38,12 @@
   },
   "homepage": "https://github.com/mdugue/react-dip#readme",
   "devDependencies": {
-    "@storybook/addon-actions": "^3.4.1",
-    "@storybook/addon-links": "^3.4.1",
-    "@storybook/addon-notes": "^3.4.1",
-    "@storybook/addon-storyshots": "^3.4.1",
-    "@storybook/addons": "^3.4.1",
-    "@storybook/react": "^3.4.1",
+    "@storybook/addon-actions": "^3.4.2",
+    "@storybook/addon-links": "^3.4.2",
+    "@storybook/addon-notes": "^3.4.2",
+    "@storybook/addon-storyshots": "^3.4.2",
+    "@storybook/addons": "^3.4.2",
+    "@storybook/react": "^3.4.2",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
     "babel-jest": "^22.4.3",
@@ -80,10 +77,7 @@
       "no-eq-null": "off",
       "eqeqeq": "off",
       "react/jsx-indent": "off",
-      "complexity": [
-        "error",
-        12
-      ]
+      "complexity": ["error", 12]
     }
   },
   "eslintIgnore": [
@@ -91,8 +85,7 @@
     "coverage",
     "dist",
     "storybook-static",
-    "examples",
-    "stories"
+    "**/build"
   ],
   "jest": {
     "rootDir": "./src/"
