removed storybook-static from git, adjusted examples/eslintrc

--- a/examples/.eslintrc
+++ b/examples/.eslintrc
@@ -2,6 +2,7 @@
   "extends": ["../node_modules/kcd-scripts/eslint.js"],
   "rules": {
     "react/prop-types": "off",
-    "import/no-unassigned-import": "off"
+    "import/no-unassigned-import": "off",
+    "import/no-unresolved": "off"
   }
 }
